{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 80,
  "lineage": "1b376781-41f9-1c4b-d149-211e7bc89f30",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lbdemo-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/loadBalancers/lbdemo-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip"
              }
            ],
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/loadBalancers/lbdemo-lb",
            "location": "eastus",
            "name": "lbdemo-lb",
            "resource_group_name": "lbdemo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "demodev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lbdemo-ip",
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lbdemo-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkInterfaces/lbdemo-nic-1",
            "internal_domain_name_suffix": "zvkhyz2gcj2unjllejtuuclzkc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.124.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-1",
                "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-1"
              }
            ],
            "location": "eastus",
            "name": "lbdemo-nic-1",
            "private_ip_address": "10.124.1.4",
            "private_ip_addresses": [
              "10.124.1.4"
            ],
            "resource_group_name": "lbdemo-rg",
            "tags": {
              "environment": "sub1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lbdemo-ip-1",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-1",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lbdemo-nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkInterfaces/lbdemo-nic-2",
            "internal_domain_name_suffix": "zvkhyz2gcj2unjllejtuuclzkc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.124.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-2",
                "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-2"
              }
            ],
            "location": "eastus",
            "name": "lbdemo-nic-2",
            "private_ip_address": "10.124.2.4",
            "private_ip_addresses": [
              "10.124.2.4"
            ],
            "resource_group_name": "lbdemo-rg",
            "tags": {
              "environment": "sub2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lbdemo-ip-2",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-2",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lbdemo-nic-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkInterfaces/lbdemo-nic-3",
            "internal_domain_name_suffix": "zvkhyz2gcj2unjllejtuuclzkc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.124.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-3",
                "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-3"
              }
            ],
            "location": "eastus",
            "name": "lbdemo-nic-3",
            "private_ip_address": "10.124.3.4",
            "private_ip_addresses": [
              "10.124.3.4"
            ],
            "resource_group_name": "lbdemo-rg",
            "tags": {
              "environment": "sub3"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lbdemo-ip-3",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-3",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lbdemo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkSecurityGroups/lbdemo-sg",
            "location": "eastus",
            "name": "lbdemo-sg",
            "resource_group_name": "lbdemo-rg",
            "security_rule": [],
            "tags": {
              "environment": "demodev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "lbdemo-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkSecurityGroups/lbdemo-sg/securityRules/lbdemo-dev-rule",
            "name": "lbdemo-dev-rule",
            "network_security_group_name": "lbdemo-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "lbdemo-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.lbdemo-sg",
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbdemo-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.20.154",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lbdemo-ip",
            "resource_group_name": "lbdemo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "demodev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbdemo-ip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.135.118",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lbdemo-ip-1",
            "resource_group_name": "lbdemo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "sub1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbdemo-ip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.135.126",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lbdemo-ip-2",
            "resource_group_name": "lbdemo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "sub2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbdemo-ip-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/publicIPAddresses/lbdemo-ip-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.227.208.55",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lbdemo-ip-3",
            "resource_group_name": "lbdemo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "sub3"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lbdemo-sbn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.124.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-1",
            "name": "lbdemo-sbn-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lbdemo-rg",
            "virtual_network_name": "lbdemo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lbdemo-sbn-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.124.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-2",
            "name": "lbdemo-sbn-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lbdemo-rg",
            "virtual_network_name": "lbdemo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lbdemo-sbn-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.124.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-3",
            "name": "lbdemo-sbn-3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lbdemo-rg",
            "virtual_network_name": "lbdemo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-1",
            "network_security_group_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkSecurityGroups/lbdemo-sg",
            "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-1"
          },
          "dependencies": [
            "azurerm_network_security_group.lbdemo-sg",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-1",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-2",
            "network_security_group_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkSecurityGroups/lbdemo-sg",
            "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-2"
          },
          "dependencies": [
            "azurerm_network_security_group.lbdemo-sg",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-2",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassociation3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-3",
            "network_security_group_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/networkSecurityGroups/lbdemo-sg",
            "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-3"
          },
          "dependencies": [
            "azurerm_network_security_group.lbdemo-sg",
            "azurerm_resource_group.lbdemo-rg",
            "azurerm_subnet.lbdemo-sbn-3",
            "azurerm_virtual_network.lbdemo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "lbdemo-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.124.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "677c54cd-1286-4679-a56b-22674a097952",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet",
            "location": "eastus",
            "name": "lbdemo-vnet",
            "resource_group_name": "lbdemo-rg",
            "subnet": [
              {
                "address_prefix": "10.124.1.0/24",
                "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-1",
                "name": "lbdemo-sbn-1"
              },
              {
                "address_prefix": "10.124.2.0/24",
                "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-2",
                "name": "lbdemo-sbn-2"
              },
              {
                "address_prefix": "10.124.3.0/24",
                "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/lbdemo-rg/providers/Microsoft.Network/virtualNetworks/lbdemo-vnet/subnets/lbdemo-sbn-3",
                "name": "lbdemo-sbn-3"
              }
            ],
            "tags": {
              "environment": "demodev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.lbdemo-rg"
          ]
        }
      ]
    }
  ]
}